--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.container{
+  width: 1236px;
+  margin: 0 auto;
+  margin-top: 2rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.grid-dashboard{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.card{
+  border: 1px solid #eeffee;
+  border-radius: 1rem;
+  height: 300px;
+  width: 300px;
+}
+.card img{
+  height: auto;
+  width: 100%;
+}
+
+.list{
+  display: flex;
+  height: 80px;
+  border: 1.5px solid #eeffee;
+  border-radius: 0.1rem;
+  margin-top: 0.5 rem;
+  margin-bottom: 0.5rem;
+
+}
+
+.list img{
+  height: 80px;
+  width: auto;
+}
+.list-body{
+  display: flex;
+  width: 100%;
+}
+.list-details{
+  width: 33%;
+  padding: 1rem;
+}
+
+.list-details p {
+  margin: 0.2rem;
+  font-size: 14px;
+}
+.list-details p span{
+  font-size: 12px;
+}
+
+.btn-toggle{
+  padding: 0.8rem 1rem;
+  background-color: gray;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-sort{
+  padding: 0.8rem 1rem;
+  background-color: green;
+  color: white;
 }
